--- a/src/lib/i18n/stories.json
+++ b/src/lib/i18n/stories.json
@@ -176,6 +176,17 @@
         "featuredImageHint": "happy cats playing on hill"
       },
       "status": "published"
+    },
+    {
+      "id": "gunung-aruna-siap-siaga",
+      "author": "Rafi, Siswa SMP",
+      "location": { "name": "Aceh Besar", "lat": 5.37, "lng": 95.52 },
+      "aiThemes": ["Disaster Preparedness"],
+      "media": {
+        "featuredImage": "https://i.ibb.co/XX5Jk0T/Gemini-Generated-Image-4.png",
+        "featuredImageHint": "volcano erupting cartoon"
+      },
+      "status": "published"
     }
   ]
 }
