skeanrang perbaiki sampulnya untuk mengambil satu gambar dari satu cerit

--- a/src/lib/i18n/stories.json
+++ b/src/lib/i18n/stories.json
@@ -183,8 +183,8 @@
       "location": { "name": "Aceh Besar", "lat": 5.37, "lng": 95.52 },
       "aiThemes": ["Disaster Preparedness"],
       "media": {
-        "featuredImage": "https://i.ibb.co/XX5Jk0T/Gemini-Generated-Image-4.png",
-        "featuredImageHint": "volcano erupting cartoon"
+        "featuredImage": "https://i.ibb.co/99CGxdNp/Gemini-Generated-Image-70jw6w70jw6w70jw.png",
+        "featuredImageHint": "boy looking at smoking volcano"
       },
       "status": "published"
     }
