--- a/src/lib/i18n/en.json
+++ b/src/lib/i18n/en.json
@@ -448,6 +448,11 @@
       "title": "Mount Aruna: Disaster Ready",
       "summary": "The story of Rafi who applies disaster mitigation lessons when Mount Aruna shows signs of erupting, successfully guiding his grandmother and community to safety.",
       "fullText": "When Mount Aruna started to smoke, Rafi remembered Mrs. Sinta's message at school: don't panic, but be prepared. He immediately grabbed the Aruna Go-Bag containing a flashlight, water, food, and a mask, then helped his grandmother to the evacuation point. Along the way, he saw other residents also guiding children and assisting the elderly. The village officials sounded the siren, giving directions, and everyone followed in an orderly manner. That night, at the evacuation site, they sat together sharing food and stories, calming those who were frightened. When dawn came and Mount Aruna was calm again, Rafi saw his village was still intact, although covered in ash. He smiled with relief—they were all safe because they were prepared. From that day on, Rafi understood that disaster mitigation is not just about knowing the theory, but about caring, cooperation, and readiness to protect oneself and others before danger arrives."
+    },
+    "angin-puting-beliung": {
+      "title": "Beware the Tornado",
+      "summary": "A story of how residents of Gentle Wind Village learned to anticipate and prepare for a tornado, turning fear into preparedness.",
+      "fullText": "One afternoon in Gentle Wind Village, the sky suddenly darkened and clouds swirled into a large vortex—a sign of an approaching tornado! In the past, residents would watch from outside, but now they knew better: get inside immediately, lock doors and windows tightly, stay away from glass, unplug electrical cords, and take shelter in the safest room, like a windowless room or under a sturdy table. Mrs. Rina had also prepared a go-bag with a flashlight, batteries, drinking water, snacks, medicine, and important documents. After the storm passed, residents helped each other clean up the debris, check the condition of their homes, and ensure no power lines were down. The children learned that tornadoes are not curses or mysteries, but natural phenomena that can be anticipated with knowledge, alertness, and cooperation. The message was clear: know the signs, prepare yourself, and don't panic—because preparedness is the best protection."
     }
   },
   "interactiveContent": {
@@ -922,6 +927,34 @@
           { "title": "A Community in Action", "text": "On the way, he saw his neighbors helping each other, following the officials' directions in an orderly manner." },
           { "title": "Together at Evacuation", "text": "At the evacuation site, everyone shared food and stories, creating a sense of calm and togetherness." },
           { "title": "Safe at Dawn", "text": "The next morning, the village was safe, covered in ash but intact. Rafi smiled, knowing they were safe because they were prepared." }
+        ]
+      }
+    },
+    "anginPutingBeliung": {
+      "video": {
+        "title": "Animated Video: Tornado Alert",
+        "description": "Learn the signs of an approaching tornado and how to protect yourself through this short animation.",
+        "info": "This video is designed for all ages to easily recognize the danger and take appropriate action."
+      },
+      "quiz": {
+        "title": "Tornado Preparedness Quiz",
+        "description": "Test your knowledge on how to deal with a tornado threat.",
+        "questions": [
+          { "question": "What is the main visual sign of an approaching tornado?", "options": ["A double rainbow", "A clear sky with no clouds", "A large, swirling vortex of clouds", "A shooting star during the day"], "correctAnswer": "A large, swirling vortex of clouds", "points": 10 },
+          { "question": "Which is the safest action when a tornado is approaching?", "options": ["Watching from the porch", "Taking shelter under a large tree", "Getting inside the house and away from windows", "Recording a video from an open area"], "correctAnswer": "Getting inside the house and away from windows", "points": 10 },
+          { "question": "What item should NOT be in a disaster go-bag for a tornado?", "options": ["Personal medications", "Flashlight and batteries", "A large umbrella", "Important documents"], "correctAnswer": "A large umbrella", "points": 10 }
+        ]
+      },
+      "comic": {
+        "title": "Comic: Gentle Wind Village Prepares",
+        "description": "Follow the story of the residents of Gentle Wind Village who learn to be prepared for tornadoes.",
+        "panels": [
+          { "title": "A Sign in the Sky", "text": "That afternoon, the sky suddenly darkened and the clouds began to swirl. The residents knew this was not a good sign." },
+          { "title": "Get Inside and Take Cover!", "text": "Unlike before, they no longer watched. Everyone immediately went inside and locked their doors." },
+          { "title": "Away from Glass, Unplug Power", "text": "Inside, they stayed away from glass windows and unplugged all electrical appliances to avoid danger." },
+          { "title": "Mrs. Rina's Go-Bag", "text": "Mrs. Rina had already prepared a go-bag with all the emergency necessities, keeping her family calm." },
+          { "title": "Mutual Help After the Storm", "text": "After the storm passed, residents came out and helped each other, cleaning up debris and ensuring the area was safe." },
+          { "title": "Knowledge Against Fear", "text": "The children now understand that a tornado is a natural phenomenon that can be faced with knowledge and preparedness." }
         ]
       }
     }
